--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -8,12 +8,12 @@
     <string name="agree">Acepto</string>
     <string name="dontagree">No acepto</string>
     <string name="updating_info_message">Actualizando información, un segundo…</string>
-    <string name="agreements_title">Bienvenido a\nPrey para Android™!</string>
-    <string name="agreements_message1">Por favor asegurate de leer y luego aceptar los términos y condiciones que se encuentran en el link de más abajo</string>
+    <string name="agreements_title">¡Bienvenido a\nPrey para Android™!</string>
+    <string name="agreements_message1">Por favor asegúrate de leer y luego aceptar los términos y condiciones que se encuentran en el link de más abajo</string>
     <string name="agreements_message2">&lt;u&gt;Términos y Condiciones&lt;/u&gt;</string>
     <string name="set_old_user_loading">Agregando equipo a la cuenta…</string>
-    <string name="set_old_user_no_more_devices_title">¡Momento!</string>
-    <string name="set_old_user_no_more_devices_text">Al parecer en tu cuenta Prey no quedan slots disponibles para tu equipo.\n\nIntenta eliminando algún disposito en tu Panel de Control, o bien crea una nueva cuenta.</string>
+    <string name="set_old_user_no_more_devices_title">¡Un momento!</string>
+    <string name="set_old_user_no_more_devices_text">Al parecer en tu cuenta Prey no queda hueco disponible para tu equipo.\n\nIntenta eliminando algún disposito en tu Panel de Control, o bien crea una nueva cuenta.</string>
     <string name="set_new_user_dialog_creating_popup">Creando la cuenta.\nUn segundo…</string>
     <string name="congratulations_title">¡Equipo agregado!</string>
     <string name="new_account_congratulations_text">Has instalado exitosamente Prey en tu equipo.\nPara finalizar el proceso debes confirmar tu email haciendo clic en el enlace que te acabamos de enviar a %s.</string>
@@ -33,7 +33,7 @@
     <string name="preferences_destination_sms">Contacto a notificar</string>
     <string name="preferences_destination_sms_summary">Será notificado por SMS con el nuevo número de teléfono</string>
     <string name="preferences_destination_sms_not_valid">El contacto que elegiste no parece tener un número de teléfono válido.</string>
-    <string name="sms_to_send_text">El teléfono de tu amigo tiene un nuevo número ya que su SIM fue reemplazado. Por favor, contáctalo a %s si crees que su teléfono ha sido robado.</string>
+    <string name="sms_to_send_text">El teléfono de tu amigo tiene un nuevo número ya que su SIM fue reemplazado. Por favor, contáctale en %s si crees que su teléfono ha sido robado.</string>
     <string name="preferences_update_sim_title">Asignar nuevo SIM</string>
     <string name="preferences_update_sim_summary">Asignar SIM actual como válido</string>
     <string name="preferences_update_sim_dialog_title">Cambiar SIM válido</string>
@@ -151,8 +151,8 @@
     <string name="no_hero_selected">No hay héroe seleccionado</string>
     <string name="your_hero_text">Tu héroe será el elegido que recibirá un SMS de alerta cuando Prey detecte una nueva tarjeta SIM en tu teléfono.</string>
     <string name="hero_chosen">¡Héroe seleccionado!</string>
-    <string name="notify_your_hero_now">¡Muy bien! ¿Te gustaría informarle a %s que lo has seleccionado como tu héroe? Le enviaremos un mensaje SMS.</string>
-    <string name="hero_notification_message">Te acabo de elegir como el héroe de mi equipo Android. Si alguien remplaza mi SIM tú serás notificado via SMS. ¡Más info en preyproject.com!</string>
+    <string name="notify_your_hero_now">¡Muy bien! ¿Te gustaría informar a %s de que le has seleccionado como tu héroe? Le enviaremos un mensaje SMS.</string>
+    <string name="hero_notification_message">Te acabo de elegir como el héroe de mi equipo Android. Si alguien reemplaza mi SIM tú serás notificado via SMS. ¡Más info en preyproject.com!</string>
     <string name="gps_network_not_enabled">Servicios de localización desactivados.\nDebes activar al menos uno de ellos si quieres localizar tu equipo.</string>
     <string name="preferences_advanced_screen_title">Configuración avanzada</string>
     <string name="preferences_advanced_screen_summary">Modifica configuración avanzada de Prey</string>
@@ -160,5 +160,5 @@
     <string name="preferences_activate_wifi_summary">Activa wifi cuando Prey se ejecute</string>
     <string name="preferences_activate_mobile_data_title">Activar datos móviles</string>
     <string name="preferences_activate_mobile_data_summary">Atención: Podría no funcionar en algunos dispositivos</string>
-    <string name="sms_not_sent">Hubo un problema enviando el mensaje. ¿Estás seguro que tu equipo puede enviar SMS?</string>
+    <string name="sms_not_sent">Hubo un problema enviando el mensaje. ¿Estás seguro de que tu equipo puede enviar SMS?</string>
 </resources>
